# technical_test_konsi

./: .gitignore  README.md  docker-compose.yml
api/: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
api/api_konsi/: main.py
api/api_konsi/business/: observable.py  observer.py
api/api_konsi/contracts/: get_benefit_contract.py  service_contract.py
api/api_konsi/infrastructure/: server.py
api/api_konsi/infrastructure/config/environment_variable/: config.py
api/api_konsi/infrastructure/config/fastapi/: config_fastapi.py
api/api_konsi/infrastructure/config/logger/: logger_config.py
api/api_konsi/infrastructure/router/: benefits_route.py  health_check_route.py
api/api_konsi/service/: get_benefit_service.py  scrapping_benefit_service.py
api/api_konsi/tests/integration/: test_get_benefit_route.py  test_health_check.py
api/docker/developer/: dockerfile
api/docker/production/: docker-compose.yaml
api/docker/production/nginx/: Dockerfile  nginx.conf
etl/crawler_benefit/: .coveragerc  .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
etl/crawler_benefit/crawler_benefit/: logger.py  main.py
etl/crawler_benefit/crawler_benefit/business/: observable.py  observer.py
etl/crawler_benefit/crawler_benefit/contract/: consumer_driver_contract.py  store_benefit_contract.py
etl/crawler_benefit/crawler_benefit/steps/: pipeline_benefit.py  pipeline_template.py
etl/crawler_benefit/docker/developer/: dockerfile
etl/crawler_benefit/docker/production/: Dockerfile
(+22 files in other folders)
